# kitsune-test-suite

./: CMakeLists.txt  README.md  README.txt
Kitsune/: CMakeLists.txt  README.md  lit.local.cfg  run-kitsune-tests  run-tests  run-tests.sh.in
Kitsune/Benchmarks/: CMakeLists.txt
Kitsune/Benchmarks/copy/: CMakeLists.txt  copy.cpp  copy.cu  copy.hip  copy.inc  copy.kit.cpp  copy.kokkos.cpp  copy.kokkos.kit.cpp  copy.omp.cpp
Kitsune/Benchmarks/euler3d/: CMakeLists.txt  common.h  euler3d.cpp  euler3d.cu  euler3d.hip  euler3d.inc  euler3d.kit.cpp  euler3d.kokkos.cpp  euler3d.kokkos.kit.cpp  euler3d.omp.cpp
Kitsune/Benchmarks/raytracer/: CMakeLists.txt  raytracer.cpp  raytracer.cu  raytracer.hip  raytracer.inc  raytracer.kit.cpp  raytracer.kokkos.cpp  raytracer.kokkos.kit.cpp  raytracer.medium.ppm  raytracer.omp.cpp  raytracer.small.ppm
Kitsune/Benchmarks/saxpy/: CMakeLists.txt  saxpy.cpp  saxpy.cu  saxpy.hip  saxpy.inc  saxpy.kit.cpp  saxpy.kokkos.cpp  saxpy.kokkos.kit.cpp  saxpy.omp.cpp
Kitsune/Benchmarks/srad/: CMakeLists.txt  fpcmp.h  srad.cpp  srad.cu  srad.hip  srad.inc  srad.kit.cpp  srad.kokkos.cpp  srad.kokkos.kit.cpp  srad.omp.cpp
Kitsune/Benchmarks/vecadd/: CMakeLists.txt  types.h  vecadd.cpp  vecadd.cu  vecadd.hip  vecadd.inc  vecadd.kit.cpp  vecadd.kokkos.cpp  vecadd.kokkos.kit.cpp  vecadd.omp.cpp
Kitsune/Benchmarks/vecscale/: CMakeLists.txt  timing.h  types.h  vecscale.cu  vecscale.hip  vecscale.inc  vecscale.kit.cpp  vecscale.kokkos.cpp  vecscale.kokkos.kit.cpp
Kitsune/MultiSource/: CMakeLists.txt
Kitsune/MultiSource/euler-3d/: compute_flux.cpp  compute_step_factor.cpp  euler-types.h  euler3d-forall.cpp  time_step.cpp
Kitsune/MultiSource/euler3d/: CMakeLists.txt  compute_flux.cpp  compute_step_factor.cpp  fvcorr.domn.193K  init.cpp  main.cpp  time_step.cpp  utils.cpp  utils.h
Kitsune/MultiSource/intersect/: common.cpp  common.h  intersect.cpp  makefile  serial_algorithms.cpp  serial_algorithms.h
Kitsune/MultiSource/vecadd/: CMakeLists.txt  add.cpp  init.cpp  main.cpp  timing.h  vecadd-add.cpp  vecadd-forall.cpp  vecadd-init.cpp
Kitsune/SingleSource/: CMakeLists.txt  global-arrays.kit.cpp  launch-attr.kit.cpp  math-calls.kit.cpp  matmul.kit.cpp  struct-args.kit.cpp
Kitsune/SingleSource/copy/: copy.inc  copy.kit.cpp  copy.kokkos.kit.cpp
Kitsune/SingleSource/euler3d/: CMakeLists.txt  euler3d.h  euler3d.inc  euler3d.kit.cpp
Kitsune/SingleSource/gpu/: CMakeLists.txt
Kitsune/SingleSource/indices/: indices.inc  indices1.kit.cpp  indices2.kit.cpp  indices3.kit.cpp
Kitsune/SingleSource/raytracer/: CMakeLists.txt  raytracer.kit.cpp
Kitsune/SingleSource/reduce1d/: multiple.kit.c  reduce-add.kit.c  reduce-band.kit.c  reduce-bor.kit.c  reduce-bxor.kit.c  reduce-land.kit.c  reduce-lor.kit.c  reduce-lxor.kit.c  reduce-max.kit.c  reduce-min.kit.c  reduce-mul.kit.c
Kitsune/SingleSource/saxpy/: saxpy.inc  saxpy.kit.cpp  saxpy.kokkos.kit.cpp
Kitsune/SingleSource/srad/: CMakeLists.txt  srad.kit.cpp
Kitsune/SingleSource/vecadd/: CMakeLists.txt  vecadd.inc  vecadd1.kit.c  vecadd1.kokkos.kit.cpp  vecadd2.kit.c  vecadd3.kit.c
Kitsune/cmake/modules/: KitsuneTestSuite.cmake
Kitsune/include/: fpcmp.h  timing.h
Kitsune/utils/: CMakeLists.txt  kit-combine  kit-plot
Kitsune/vecadd/: vecadd.cu  vecadd.kokkos.cpp
cmake/modules/: KitsuneTestSuite.cmake
litsupport/: CMakeLists.txt
litsupport/modules/: kitsune.py
